Fix z-index on Progress Indicator Bar fixes issue #151

--- a/app/assets/stylesheets/molecules/_progress-indicator.scss
+++ b/app/assets/stylesheets/molecules/_progress-indicator.scss
@@ -3,6 +3,7 @@
   margin: 1em auto;
   text-align: center;
   position: relative;
+  z-index:0;
   &:before {
     content: '';
     display: block;
